Test environment implemented. Further documentation was created. Creation of dmg file with jpackage was configured via maven pom.xml